# ansible

./: .gitignore  .trace_viewer_layout.json  AGENTS.md  Cargo.toml  README.md  TODO.md  TODO.txt
data/themes/: Material-Theme.tmtheme  Tomorrow-Night-Eighties.tmtheme
src/: app.rs  code_window.rs  constants.rs  helpers.rs  icons.rs  main.rs  model.rs  sidebar.rs  theme.rs
src/app/: input.rs  mod.rs  render.rs  state.rs  types.rs  util.rs
src/code_window/: metrics.rs  mod.rs  render.rs  types.rs
src/model/: highlight.rs  mod.rs  parse.rs  plugins.rs  project.rs  rust_symbols.rs  types.rs
