[package]
name = "ansible"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
raylib = "5.0"
walkdir = "2.5"
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
