[package]
name = "ansible"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
raylib = "5.0"
walkdir = "2.5"
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
resvg = "0.45.1"
png = "0.18.0"
plist = "1.7"
tree-sitter = "0.26.2"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
notify = "6.1"
